# quai-gpu-miner-archive

./: .bumpversion.cfg  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  Dockerfile  Makefile  README.md  VERSION  appveyor.yml  circle.yml  go.mod  go.sum  main.go  miner_deploy_script.sh
.github/workflows/: build-deploy.yml  cut-minor-release.yml  deploy-dev.yml  deploy-prod.yml  deploy-sandbox.yml
cmake/Hunter/: config.cmake
config/: config.yaml  config.yaml.dist
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
ethcoreminer/: CMakeLists.txt  ethcoreminer.rc  main.cpp
libapicore/: ApiServer.cpp  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
libethash/: progpow.cpp
libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel.cl  CMakeLists.txt
libethash-cl/kernels/: README.md
libethash-cl/kernels/cl/: ethash.cl
libethash-cpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  CUDAMiner_kernel.cu
libethash/ethash/: ethash.h  progpow.hpp
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libhwmon/: wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
libprogpow/: ProgPow.cpp  ProgPow.h
progminer/: CMakeLists.txt  main.cpp
scripts/: testpools.bash
util/: config.go  miner_utils.go
